# excel-checker

./: .gitignore  README.md  pyproject.toml  res\results\Cars.txt
.github/actions/poetry/: action.yaml
.github/workflows/: action.yaml  main.yaml
excel_checker/: __init__.py  cell_check.py  check.py  checkertypes.py  col_check.py  errortypes.py  excel_checker.py  row_check.py
excel_checker/checkers/: checker.py  document_checker.py  metadata_checker.py  row_checker.py  sheet_checker.py
excel_checker/checks/: C_01.py  C_02.py
excel_checker/visitorum/: checker_visitor.py  components.py  visitor.py  visitor_config.py
res/custom-checks/: C_01.py  C_02.py  C_03.py  C_04.py  C_Owner.py  R_LowMileage.py  Z_SellerName.py  config.yaml  config_2.yaml  config_dealer.yaml
res/results/: Cars.txt
res/sources/test/: Car Dealer.numbers  Car Dealer.xlsx  Cars.xlsx
src/: cell_check.py  check.py  col_check.py  excel_checker.py  row_check.py
src/checkers/: checker.py  document_checker.py  metadata_checker.py  row_checker.py  sheet_checker.py
src/checks/: C_01.py  C_02.py  __init__.py
src/visitorum/: checker_visitor.py  components.py  visitor.py
test/: veichle_test.py  visitore.py
tests/: dropdown.py  test_vehicle.py  test_visitore.py  veichle_test.py
