[tool.poetry]
name = "excel-checker"
version = "0.1.0"
description = "Check your excel file via user defined python scripts"
authors = ["soapwaster", "angelocatalani"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.1.1"
pyyaml = "^5.3.1"
sortedcollections = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
